--- a/MVC5TDDExperiments.Tests/MVC5TDDExperiments.Tests.csproj
+++ b/MVC5TDDExperiments.Tests/MVC5TDDExperiments.Tests.csproj
@@ -80,6 +80,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.1.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="Telerik.JustMock">
+      <HintPath>..\packages\JustMock.2014.2.609.3\lib\Net35\Telerik.JustMock.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
