TDD implementation for Edit book operation

--- a/MVC5TDDExperiments/MVC5TDDExperiments.csproj
+++ b/MVC5TDDExperiments/MVC5TDDExperiments.csproj
@@ -224,6 +224,7 @@
     <Content Include="Views\Home\FindByGenre.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Home\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
