Edit actions with dropdownlist for Authors (link to author entity)

--- a/MVC5TDDExperiments.Tests/MVC5TDDExperiments.Tests.csproj
+++ b/MVC5TDDExperiments.Tests/MVC5TDDExperiments.Tests.csproj
@@ -85,6 +85,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\BookHelper.cs" />
+    <Compile Include="Helpers\AuthorHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
