--- a/MVC5TDDExperiments/MVC5TDDExperiments.csproj
+++ b/MVC5TDDExperiments/MVC5TDDExperiments.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Models\BookStoreDb.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\IRepository.cs" />
+    <Compile Include="Models\ViewModels\BookEditViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
