--- a/MVC5TDDExperiments/MVC5TDDExperiments.csproj
+++ b/MVC5TDDExperiments/MVC5TDDExperiments.csproj
@@ -165,7 +165,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Author.cs" />
-    <Compile Include="Models\BookDBRepository.cs" />
+    <Compile Include="Models\BookStoreRepository.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
