Detail view with TDD

--- a/MVC5TDDExperiments/MVC5TDDExperiments.csproj
+++ b/MVC5TDDExperiments/MVC5TDDExperiments.csproj
@@ -233,6 +233,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Home\Edit.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
