--- a/MVC5TDDExperiments.Tests/MVC5TDDExperiments.Tests.csproj
+++ b/MVC5TDDExperiments.Tests/MVC5TDDExperiments.Tests.csproj
@@ -85,6 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\EditHomeControllerTest.cs" />
     <Compile Include="Helpers\BookHelper.cs" />
     <Compile Include="Helpers\AuthorHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
