--- a/MVC5TDDExperiments/MVC5TDDExperiments.csproj
+++ b/MVC5TDDExperiments/MVC5TDDExperiments.csproj
@@ -177,6 +177,11 @@
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Models\ViewModels\BookEditViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Messages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -250,6 +255,11 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201406190826044_InitialCreate.resx">
       <DependentUpon>201406190826044_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Messages.fr.resx" />
+    <EmbeddedResource Include="Resources\Messages.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
